--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bootstrap": "^4.3.1",
     "date-fns": "^2.14.0",
     "react": "^16.8.5",
+    "react-bootstrap": "^1.0.1",
     "react-csv": "^1.1.1",
     "react-dom": "^16.8.5",
     "react-router-dom": "^5.2.0",
